@@ -42,6 +42,10 @@ not yet  BJH  Release 10.41.00
               pm_freerow(); change row buffer type from char * to void *
               for pm_allocrow(), pm_freerow().
 
+              set _XOPEN_SOURCE=600 so jpeg2ktopam and pamtojpeg2k
+              compile on AIX (_XOPEN_SOURCE=500 keeps int_fast32_t from
+              being defined).
+
               Fix bug: ppmdraw.h, ppmdfont.h not installed.
 
               package, install: install interface header files as
